# zopflipy

./: .coveragerc  .gitignore  .gitmodules  CHANGES.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  test_zopfli.py  tox.ini  zopfli.py
.github/workflows/: ci.yml  codeql.yml  wheel.yml
_zopfli/: _zopflimodule.c  _zopflimodule.h  zopflipng.cpp
tests/: test_zopfli.py
zopfli/: __init__.py  _zopfli.pyi
zopfli/_zopfli/: _zopflimodule.c  _zopflimodule.h  zopflipng.cpp
