[metadata]
name = zopflipy
description = A Python bindings for Zopfli
long_description = file: README.rst
author = Akinori Hattori
author_email = hattya@gmail.com
url = https://github.com/hattya/zopflipy
license = ALv2
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Compression

[options]
python_requires = >= 3.7
packages = zopfli

[options.package_data]
zopfli = py.typed, *.pyi

[sdist]
formats = zip
group = users

[flake8]
extend-ignore = E129, E741
max-line-length = 160

[mypy]
strict = True
disable_error_code = attr-defined, misc, override
